...
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/serverTopButtons">

                <CheckBox
                    android:id="@+id/server_sync_notifications"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications_sync_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
...
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/syncNotificationLayout">

                <CheckBox
                    android:id="@+id/clipboard_enable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/clipboard_enable_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
...
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/clipboard_enable" />

                <CheckBox
                    android:id="@+id/clipboard_server_get"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:enabled="true"
                    android:text="@string/clipboard_server_get_title"
                    app:layout_constraintEnd_toEndOf="parent"
...
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clipboardSettingsLayout">

                <CheckBox
                    android:id="@+id/filesharing_enable_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:text="@string/filesharing_enable_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
...
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/filesharing_enable_title" />

                <CheckBox
                    android:id="@+id/filesharing_auto_accept_files"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/filesharing_auto_accept_files_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/filesharingRightTab"
                    app:layout_constraintTop_toBottomOf="@+id/filesharing_enable_title" />

                <CheckBox
                    android:id="@+id/filesharing_notify_on_receive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/filesharing_notify_on_receive_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/filesharingRightTab"
                    app:layout_constraintTop_toBottomOf="@+id/filesharing_auto_accept_files" />

                <CheckBox
                    android:id="@+id/filesharing_server_set"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/filesharing_server_set_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/filesharingRightTab"
...
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/server_settings_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/teal_700"
            android:text="@string/menu_server_settings_save"
            app:layout_constraintEnd_toEndOf="parent"
...
